# jsi_trial

./: .editorconfig  .gitignore  README.md  package.json  react-native-sequel.podspec
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
cpp/: react-native-sequel.cpp
example/ios/: Podfile
example/src/: App.tsx
ios/: Sequel.h  Sequel.mm
src/: index.tsx
